src/styles/global.css
@import "reset.css";
@import "cooperbt.css";
@import "pragmatapro.css";

:root {
  --width: 768px;
  --color-text: rgba(0, 0, 0, .8);
  --color-heading: #111;
  --color-light: #ccc;
  --color-gray: #555;
  --color-nav-stroke: rgb(242 45 94);

  --color-primary-rgb: 53 88 255;
  --color-primary: rgb(var(--color-primary-rgb));
  --color-bg: rgb(var(--color-primary-rgb) / .1%);
  --color-button: rgb(var(--color-primary-rgb) / 10%);
  --color-button-hover: rgb(var(--color-primary-rgb) / 20%);

  --color-header-bg:  rgb(var(--color-primary-rgb) / 4%);
  --color-header-border: rgb(var(--color-primary-rgb) / 4%);

  --color-footer-bg: rgba(0, 0, 0, 0.02);
  --color-footer-border: rgba(0, 0, 0, 0.02);

  --color-box-bg: rgba(0, 0, 0, 0.02);
  --color-box-border: rgba(0, 0, 0, 0.05);

  --font-serif: "Cooper BT", Iowan Old Style, Apple Garamond, Baskerville, Times New Roman, Droid Serif, Times, Source Serif Pro, serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
  --font-sans: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";

  /* Type scale 1.250 (Major Third) */
  --font-size-largest: 1.953rem;
  --font-size-larger: 1.563rem;
  --font-size-large: 1.25rem;
  --font-size-small: 0.8rem;

  --astro-code-color-text: var(--color-text);
  --astro-code-color-background: var(--color-box-bg);
  --astro-code-token-constant: var(--color-primary);
  --astro-code-token-string: #22863a;
  --astro-code-token-comment: var(--color-gray);
  --astro-code-token-keyword: #ec3c3c;
  --astro-code-token-parameter: #FF9800;
  --astro-code-token-function: #7538e5;
  --astro-code-token-string-expression: #0d8a2b;
  --astro-code-token-punctuation: #212121;
  --astro-code-token-link: #1976D2;
}

@media (prefers-color-scheme: dark) {
  :root {
    --color-text: #ccc;
    --color-heading: #ddd;
    --color-light: #777;
    --color-gray: #bbb;
    --color-bg: #111;

    --color-primary-rgb: 83 118 255;

    --color-header-bg:  rgb(var(--color-primary-rgb) / 10%);
    --color-header-border: rgb(var(--color-primary-rgb) / 10%);

    --color-footer-bg: rgba(255, 255, 255, 0.02);
    --color-footer-border: rgba(255, 255, 255, 0.02);

    --color-box-bg: rgba(255, 255, 255, 0.02);
    --color-box-border: rgba(255, 255, 255, 0.05);

    --astro-code-token-function: #a575ff;
    --astro-code-token-string-expression: #57b96f;
  --astro-code-token-punctuation: #dedede;
  }

  article img {
    opacity: .8;
  }
}

html {
  font-size: 112.5%; /* 18px when the browser is set to 16px */
}

body {
  font-family: var(--font-sans);
  display: flex;
  flex-direction: column;
  align-items: stretch;
  color: var(--color-text);
  background: var(--color-bg);
  font-weight: 500;
}

main {
  flex-grow: 1;
}

header, main, footer {
  width: 100%;
  margin: 0 auto;
}

header {
  background: var(--color-header-bg);
  border-bottom: 1px solid var(--color-header-border);
}

main {
  max-width: var(--width);
  padding: 16px 12px;
}

footer {
  padding: 16px 0 20px;
  background: var(--color-footer-bg);
  border-top: 1px solid var(--color-footer-border);
}

h1, h2, h3, h4, h5, h6 {
  color: var(--color-heading);
  font-family: var(--font-serif);
  font-weight: 800;
  line-height: 1.2;
  font-size: 1rem;
}

h1 {
  font-size: var(--font-size-larger);
}

h2 {
  font-size: var(--font-size-large);
}

blockquote {
  padding: 0 0 0 16px;
  border-left: 4px solid var(--color-primary);
  color: var(--color-gray);
  font-style: italic;
}

a {
  color: var(--color-primary);
  text-decoration: underline;
}

a:hover {
  text-decoration: none;
}

code {
  font-family: "Pragmata Pro", monospace;
}

.astro-code, .box {
  padding: 8px 12px;
  border-radius: 8px;
  border: 1px solid var(--color-box-border);
  background: var(--color-box-bg);
}

.meta {
  display: block;
  color: var(--color-gray);
  font-size: var(--font-size-small);
}

.skip-link {
  position: absolute;
  transform: translateY(-100%);
  background: var(--color-code-bg);
  padding: 4px 8px;
  border-radius: 0 0 8px 0;
}

.skip-link:focus {
  transform: translateY(0);
}

label {
  text-transform: uppercase;
  font-size: var(--font-size-small);
  display: block;
  font-weight: 700;
}

small {
  font-size: var(--font-size-small);
}

input {
  border-radius: 8px;
  padding: 4px 8px;
  background: var(--color-box-bg);
  border: 1px solid var(--color-box-border);
}

input[type="submit"] {
  background: var(--color-primary);
  color: #fff;
  cursor: pointer;
}

ul, ol {
  padding-left: 20px;
}

hr {
  border-top: 1px solid var(--color-light);
  border-left: 0;
  border-right: 0;
  border-bottom: 0;
}

article img {
  border-radius: 8px;
  height: auto;
}

.clear {
  clear: both;
}


.stack > * {
  margin-block: 0;
} 

.stack > * + * {
  margin-block-start: var(--space, 1rem);
}

.stack h1 + .meta, .stack h2 + .meta, .stack h3 + .meta, .stack h4 + .meta, .stack h5 + .meta, .stack h6 + .meta {
  --space: 0.2rem;
}

.stack-small > * {
  margin-block: 0;
} 

.stack-small > * + * {
  margin-block-start: var(--space, .5rem);
}

.stack-small h1 + .meta, .stack-small h2 + .meta, .stack-small h3 + .meta, .stack-small h4 + .meta, .stack-small h5 + .meta, .stack-small h6 + .meta {
  --space: 0.2rem;
}

